--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
+        <!-- jQuery File -->
+	    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+	    </script>
+
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -444,4 +448,6 @@
             </div>
         </footer>
     </body>
+
+    <script type="text/javascript" src="Main.js"></script>
 </html>
